# cohere-aya-test

./: Makefile  README.md  config.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
explore_aya/: __init__.py  dataset.py  features.py  plots.py
explore_aya/modeling/: predict.py  train.py
notebooks/: 3.01-rn-multi-agent-rag-poc-1.ipynb
